--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ body {
 .container {
   max-width: 1440px;
   margin: 0 auto;
+  width: 95%;
 }
 
 h1 {
@@ -69,6 +70,7 @@ label {
 .heading {
   text-align: center;
   color: var(--green-900);
+  margin-bottom: 2rem;
 }
 
 .card {
@@ -77,7 +79,7 @@ label {
   max-width: 800px;
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(2, minmax(0, 1fr));
   column-gap: 5rem;
   padding: 2rem;
   border-radius: 15px;
@@ -91,6 +93,8 @@ label {
 .bill-label {
   margin-bottom: 0.5rem;
 }
+
+/* INPUTS FOR BILL AND NUMBER OF PEOPLE */
 
 .bill-input,
 .people-input {
@@ -119,6 +123,7 @@ label {
   margin-bottom: 2rem;
 }
 
+/* TIP CONTAINER */
 .tip-text {
   font-weight: var(--fw-bold);
   color: var(--green-900);
@@ -127,7 +132,7 @@ label {
 
 .tip-container {
   display: grid;
-  grid-template-columns: repeat(3, 120px);
+  grid-template-columns: repeat(3, minmax(0, 1fr));
   margin-bottom: 2rem;
   gap: 1rem;
 }
@@ -163,6 +168,8 @@ label {
   color: var(--green-900);
 }
 
+/* NUMBER OF PEOPLE WRAPPER */
+
 .wrapper-text {
   display: flex;
   justify-content: space-between;
@@ -172,6 +179,8 @@ label {
 .people-label {
   margin-bottom: 0.5rem;
 }
+
+/* DISPLAY CALCULATOR RESULT */
 
 .calculator-result-container {
   background-color: var(--green-900);
@@ -223,7 +232,7 @@ label {
   background-color: var(--grey-200);
 }
 
-/* ERROR STATE */
+/* ERROR  and ACTIVE STATES */
 .error-message {
   font-size: var(--fs-sm);
   font-weight: var(--fw-bold);
@@ -242,4 +251,17 @@ label {
 .active-tip-btn {
   background-color: var(--green-400);
   color: var(--green-900);
+}
+
+/* MEDIA QUERIES */
+@media (max-width: 50rem) {
+  .card {
+    grid-template-columns: 1fr;
+    column-gap: 0;
+    padding: 3rem;
+  }
+
+  .tip-container {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
 }
